# tuim

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO
include/: ansi.h  ascii.h  backend.h  box.h  button.h  canvas.h  checkbox.h  color.h  context.h  element.h  event.h  frame_buffer.h  id.h  input.h  keyboard.h  layout.h  list.h  mouse.h  os.h  rect.h  scroll_view.h  size_hint.h  string_format.h  style.h  table.h  text.h  text_list.h  textbox.h  tuim.h  unicode.h  viewport.h  widget.h  window.h  window_manager.h
include/backends/abstract/: abstract.h
include/backends/ansi/: ansi_backend.h
include/backends/linux/: linux_backend.h
include/backends/windows/: windows_backend.h
src/: ansi.c  ascii.c  backend.c  button.c  canvas.c  checkbox.c  context.c  element.c  event.c  frame_buffer.c  id.c  input.c  keyboard.c  layout.c  list.c  main.c  mouse.c  os.c  rect.c  scroll_view.c  size_hint.c  string_format.c  style.c  table.c  text.c  text_list.c  textbox.c  unicode.c  viewport.c  widget.c  window.c  window_manager.c
src/backends/ansi/: ansi_backend.c
src/backends/linux/: linux_backend.c
src/backends/windows/: windows_backend.c
tests/: basic.c  basic_unicode.c  mouse_test.c  shit.c
